# iprange

./: .codacy.yml  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README.md  SECURITY.md  TODO-iprange-test-hardening.md  TODO-repo-layout-readme.md  autogen.sh  configure.ac  iprange.c  iprange.h  iprange.spec.in  ipset.c  ipset.h  ipset_binary.c  ipset_binary.h  ipset_combine.c  ipset_combine.h  ipset_common.c  ipset_common.h  ipset_copy.c  ipset_diff.c  ipset_exclude.c  ipset_exclude.h  ipset_load.c  ipset_load.h  ipset_merge.c  ipset_merge.h  ipset_optimize.c  ipset_print.c  ipset_print.h  ipset_reduce.c  ipset_reduce.h  run-build-tests.sh  run-sanitizer-tests.sh  (+2 more)
.agents/sow/: SOW.template.md  audit.sh
.github/: dependabot.yml
.github/codacy-analysis/: package-lock.json  package.json
.github/workflows/: big-endian.yml  codeql.yml  publish.yml  scorecard.yml  security.yml  setup.sh  sync-wiki.yml
.travis/: travis_rsa.enc
cmake/: config.h.in
conformance/: README.md
conformance/cases/: merge-v4-empty.json  merge-v4-partial-overlap.json  merge-v4-single-feed.json  reject-merge-duplicate-feed-id.json  v4-coalesce-adjacent.json  v4-empty.json  v4-single-range.json  v6-membership-set.json  v6-single-range.json
conformance/golden/: merge-v4-disjoint.iprbin  merge-v4-terminal-max.iprbin  merge-v6-overlap.iprbin  v4-single-range.iprbin
conformance/legacy/: v4-optimized.json  v6-optimized.json
docs/: output-formats.md
go/: conformance_test.go  craft_test.go  errors.go  go.mod  iprangeformat_test.go  key.go  legacy.go  legacy_test.go  merge.go  reader.go  spec.go  validation_test.go  wire.go  writer.go
m4/: ax_need_prog.m4
packaging/: README.md  iprange-9999.ebuild  iprange.spec.in  packaging.functions  tar-compare
rust/: Cargo.toml
rust/iprange-format/: Cargo.toml
rust/iprange-format/src/: key.rs  legacy.rs  lib.rs  merge.rs  reader.rs  spec.rs  wire.rs  writer.rs
rust/iprange-format/tests/: conformance.rs  legacy.rs  robustness.rs  speed.rs
src/: iprange.c  iprange.h  iprange6.h  iprange6_main.c  ipset.c  ipset.h  ipset6.c  ipset6.h  ipset6_binary.c  ipset6_binary.h  ipset6_combine.c  ipset6_common.c  ipset6_copy.c  ipset6_diff.c  ipset6_dns.c  ipset6_dns.h  ipset6_exclude.c  ipset6_load.c  ipset6_load.h  ipset6_merge.c  ipset6_optimize.c  ipset6_print.c  ipset6_print.h  ipset_binary.c  ipset_combine.c  ipset_common.c  ipset_copy.c  ipset_copy.h  ipset_diff.h  ipset_dns.c  ipset_dns.h  ipset_exclude.c  ipset_load.c  ipset_load.h  ipset_merge.c  ipset_merge.h  ipset_optimize.c  ipset_optimize.h  ipset_print.c  ipset_reduce.c  (+1 more)
tests.build.d/01-without-compare-with-common/: cmd.sh  output
tests.build.d/02-vpath-build-after-in-tree-build/: cmd.sh  output
tests.build.d/03-run-tests-safe-refusal/: cmd.sh  output
tests.build.d/04-make-check-propagates-iprange-bin/: cmd.sh  output
tests.build.d/05-sanitizer-job-fallback/: cmd.sh  output
tests.build.d/06-binary-bytes-format-size_t/: cmd.sh  output
tests.build.d/07-run-unit-tests-compile-failure/: cmd.sh  output
tests.build.d/08-portable-u128-build/: cmd.sh  output
tests.d/: README.md
tests.d/01-basic-merge/: cmd.sh  input1  input2  output
tests.d/02-common/: cmd.sh  input1  input2  output
tests.d/03-exclude/: cmd.sh  input1  input2  output
tests.d/04-diff/: cmd.sh  input1  input2  output
tests.d/05-file-list/: cmd.sh  filelist  input1  input2  input3  output
tests.d/06-file-list-compare/: cmd.sh  filelist  input1  input3  output
tests.d/07-file-list-compare-next/: cmd.sh  filelist1  filelist2  input2  output
tests.d/08-print-ranges/: cmd.sh  input1  output
tests.d/09-prefix-suffix/: cmd.sh  input1  output
tests.d/10-dont-fix-network/: cmd.sh  input1  output
tests.d/100-ipv6-compare-first/: cmd.sh  input1  input2  output
tests.d/11-diff-no-difference/: cmd.sh  input1  input2  output
tests.d/12-directory-list/: cmd.sh  output
tests.d/13-complex-compare-next/: cmd.sh  filelist1  filelist2  input1  input11  input2  input3  input4  input6  input7  input8  input9  output
tests.d/14-has-directory-loading/: cmd.sh  output
tests.d/15-empty-inputs/: cmd.sh  output
tests.d/16-recursive-directory/: cmd.sh  output
tests.d/17-mixed-input-formats/: cmd.sh  input1  output
tests.d/18-invalid-input/: cmd.sh  input1  output
tests.d/19-nonexistent-paths/: cmd.sh  output
tests.d/20-large-scale/: cmd.sh  (+1 more)
tests.unit/: combine_overflow.c  copy_overflow.c  empty_ipset_ops.c  free_all_linked_list.c  merge_overflow.c  optimize_empty_lsan.c
v4/rust/: Cargo.toml
v4/rust/iprange-livedb/: Cargo.toml
v4/rust/iprange-livedb/benches/: core.rs  os_bench.rs
v4/rust/iprange-livedb/src/: crc32c.rs  cursor.rs  error.rs  export.rs  extsort.rs  feed_migrate.rs  free_list.rs  interval.rs  key.rs  kv.rs  lib.rs  migrate.rs  node.rs  os.rs  overlap.rs  page_set.rs  page_store.rs  reader.rs  readers.rs  record.rs  scope.rs  scope_table.rs  spec.rs  wire.rs  writer.rs
v4/rust/iprange-livedb/tests/: alloc_test.rs  audit3.rs  audit_regressions.rs  boundary_bug_test.rs  churn_test.rs  conformance.rs  engine_basic.rs  feed_bit_panic_test.rs  feed_bit_test.rs  feed_migrate_test.rs  issue2_reopen_cycle.rs  issue3_scope_corruption.rs  issue4_spill_safety.rs  issue8_compact_test.rs  metadata_conformance.rs  migrate_boundary_test.rs  migrate_multilevel_test.rs  migrate_test.rs  multiprocess_test.rs  reader_scope_test.rs  reaudit.rs  reaudit2.rs  robustness.rs  round4_corruption.rs  round4_os_regressions.rs  round4_regressions.rs  round4_transaction.rs  round5_extsort.rs  round5_freelist.rs  round5_limits.rs  round5_overflow.rs  round5_public_api.rs  round5_transaction.rs  round5_writable_corruption.rs  round6_extsort_memory.rs  round6_open_file_copy_memory.rs  round6_open_memory.rs  round6_overlap_memory.rs  round6_reader_safety.rs  round6_scope_commit_memory.rs  (+4 more)
wiki/: Home.md  compare.md  count-unique.md  diff.md  dns-resolution.md  exclude.md  input-formats.md  intersect.md  ipset-reduce.md  ipv6.md  merge.md  operations.md  output-formats.md  reduce.md
(+371 files in other folders)
