[package]
name = "iprange-livedb"
version = "0.0.0"
description = "Reader/writer for the iprange v4 live mutable on-disk DB format"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "os"]
# `std`: the in-memory writer + reader over byte slices.
std = ["alloc"]
alloc = []
# `os`: the Unix file layer — mmap reader (memmap2) and the pread/pwrite+fsync+flock
# writer (libc) with the §10 O_NOFOLLOW / hole-detection / fstat hardening.
os = ["std", "dep:memmap2", "dep:libc"]

[dependencies]
memmap2 = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

# Test-only: the conformance harness parses the shared language-neutral cases.json.
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
